--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                 <li><a href="#">Услуги</a></li>
                 <li><a href="#">О компании</a></li>
                 <li><a href="#">Контакты</a></li>
+                <li>
+                <button id="theme-toggle" class="theme-toggle">
+                    <span class="theme-icon">🌓</span>
+                </button>
+                </li>
             </ul>
         </div>
     </nav>
