--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Навигационное меню -->
     <nav id="navbar">
         <div class="nav-container">
-            <div class="logo">КаркасДомСтрой</div>
+            <div class="logo">EarthDom</div>
             <ul class="nav-links">
                 <li><a href="#">Главная</a></li>
                 <li><a href="#">Проекты</a></li>
@@ -126,7 +126,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2023 КаркасДомСтрой. Все права защищены.</p>
+            <p>&copy; 2023 EarthDom. Все права защищены.</p>
         </div>
     </footer>
     
