--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1600566752355-35792bedcfea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
         
         <div class="hero-content">
-            <h1>Проектирование и строительство каркасных домов</h1>
-            <p>Создаём тёплые, надёжные и стильные дома с 2010 года</p>
+            <h1>Проектируем и строим архитектурные шедевры.</h1>
+            <p>Создаём дома, где современные технологии встречаются с природной гармонией.</p>
             <a href="#" class="btn">Оставить заявку</a>
         </div>
     </section>
