--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1600607687920-4e2a09cf159d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
         <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1600566752355-35792bedcfea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
         
-        <div class="hero-content hero-content-left">
+        <div class="hero-content hero-content-center">
     <h1>Проектирование и строительство каркасных домов</h1>
     <p>Создаём тёплые, надёжные и стильные дома с 2010 года</p>
     <a href="#" class="btn">Оставить заявку</a>
