--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="hero-content hero-content-left">
     <h1>Проектирование и строительство каркасных домов</h1>
     <p>Создаём тёплые, надёжные и стильные дома с 2010 года</p>
-    <a href="#" class="fixed-cta-btn">Оставить заявку</a>
+    <a href="#" class="btn">Оставить заявку</a>
 </div>
     </section>
     
@@ -131,6 +131,5 @@
     </footer>
     
     <script src="js/script.js"></script>
-    <div style="height: 2000px;"></div>
 </body>
 </html>
