--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <nav id="navbar">
         <div class="nav-container">
             <div class="logo">EarthDom</div>
+            <button class="mobile-menu-toggle" aria-label="Меню">
+
+
+
+                <span></span>
+
+
+                <span></span>
+
+
+                <span></span>
+
+
+            </button>
             <ul class="nav-links">
                 <li><a href="#">Главная</a></li>
                 <li><a href="#">Проекты</a></li>
