--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav id="navbar">
         <div class="nav-container">
             <div class="logo">EarthDom</div>
-            <button class="mobile-menu-toggle" aria-label="Меню">
+            <button class="mobile-menu-toggle" aria-label="Меню" style="opacity: 0; position: absolute;">
 
 
             </button>
