--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="hero-content hero-content-left">
             <h1>Проектирование и строительство каркасных домов</h1>
             <p>Создаём тёплые, надёжные и стильные дома с 2010 года</p>
-            <a href="https://t.me/@SaveAsBot" class="btn" target="_blank" rel="noopener noreferrer">Оставить заявку</a>
+            <a href="https://t.me/SaveAsBot" class="btn" target="_blank" rel="noopener noreferrer">Оставить заявку</a>
         </div>
     </section>
     
@@ -121,7 +121,7 @@
                 </ul>
                 
                 <div class="contact-buttons">
-                    <a href="https://t.me/@SaveAsBot" class="btn" target="_blank" rel="noopener noreferrer">Получить консультацию</a>
+                    <a href="https://t.me/SaveAsBot" class="btn" target="_blank" rel="noopener noreferrer">Получить консультацию</a>
                 </div>
             </div>
         </div>
