--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Навигационное меню -->
     <nav id="navbar">
         <div class="nav-container">
-            <div class="logo">EarthDom</div>
+            <a href="/" class="logo">EarthDom</a>
             <button class="mobile-menu-toggle" aria-label="Меню" style="opacity: 0; position: absolute;">
 
 
