--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             </button>
             <ul class="nav-links">
                 <li><a href="#">Проекты</a></li>
+                <li><a href="#">Материалы</a></li>
                 <li><a href="#">Услуги</a></li>
                 <li><a href="#">О компании</a></li>
                 <li><a href="#">Контакты</a></li>
