--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Проекты</a></li>
                 <li><a href="#">Материалы</a></li>
                 <li><a href="#">Услуги</a></li>
-                <li><a href="#">О компании</a></li>
+                <li><a href="/company.html">О компании</a></li>
                 <li><a href="#">Контакты</a></li>
                 <li>
                     <button id="theme-toggle" class="theme-toggle">
