--- a/company.html
+++ b/company.html
@@ -15,11 +15,11 @@
              
             </button>
             <ul class="nav-links">
-                <li><a href="#">Проекты</a></li>
-                <li><a href="#">Материалы</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">О компании</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="/project.html">Проекты</a></li>
+                <li><a href="/material.html">Материалы</a></li>
+                <li><a href="/services.html">Услуги</a></li>
+                <li><a href="/company.html">О компании</a></li>
+                <li><a href="/contacs.html">Контакты</a></li>
                 <li>
                     <button id="theme-toggle" class="theme-toggle">
                         <span class="theme-icon">🌓</span>
