--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
                 <li><a href="/material.html">Материалы</a></li>
                 <li><a href="/services.html">Услуги</a></li>
                 <li><a href="/company.html">О компании</a></li>
-                <li><a href="/contacs.html">Контакты</a></li>
+                <li><a href="/contacts.html">Контакты</a></li>
                 <li>
                     <button id="theme-toggle" class="theme-toggle">
                         <span class="theme-icon">🌓</span>
