--- a/company.html
+++ b/company.html
@@ -17,10 +17,11 @@
                 <span></span>
             </button>
             <ul class="nav-links">
-                <li><a href="projects.html">Проекты</a></li>
-                <li><a href="services.html">Услуги</a></li>
-                <li><a href="about.html" class="active">О компании</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+                 <li><a href="/project.html">Проекты</a></li>
+                <li><a href="/material.html">Материалы</a></li>
+                <li><a href="/services.html">Услуги</a></li>
+                <li><a href="/company.html">О компании</a></li>
+                <li><a href="/contacts.html">Контакты</a></li>
                 <li>
                     <button id="theme-toggle" class="theme-toggle">
                         <span class="theme-icon">🌓</span>
