--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
         <div class="hero-content hero-content-left">
             <h1>Проектирование и строительство каркасных домов</h1>
             <p>Создаём тёплые, надёжные и стильные дома с 2010 года</p>
-            <a href="https://t.me/SaveAsBot" class="btn" target="_blank" rel="noopener noreferrer">Оставить заявку</a>
         </div>
     </section>
     
@@ -120,7 +119,7 @@
                     </ul>
                     
                     <div class="contact-buttons">
-                        <a href="https://t.me/SaveAsBot" class="btn" target="_blank" rel="noopener noreferrer">Получить консультацию</a>
+                        <a href="/contacts.html" class="btn" target="_blank" rel="noopener noreferrer">Получить консультацию</a>
                     </div>
                 </div>
             </div>
