--- a/company.html
+++ b/company.html
@@ -45,9 +45,9 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2>Наша история</h2>
-                    <p>Компания EarthDom была основана в 2010 году группой энтузиастов, которые хотели изменить подход к строительству частных домов. Начиная с небольших проектов, мы выросли в компанию, которая реализует сложные и масштабные решения по всей России.</p>
+                    <p>Компания EarthDom была основана в 2010 году группой энтузиастов, которые хотели изменить подход к проектированию и строительству частных домов. Начиная с небольших проектов, мы выросли в компанию, которая реализует сложные и масштабные решения по всей России.</p>
                     
-                    <p>За 13 лет работы мы построили более 200 домов в разных регионах страны. Наши клиенты — это люди, которые ценят качество, надежность и индивидуальный подход.</p>
+                    <p>За 13 лет работы мы спроектировали и построили более 200 домов в разных регионах страны. Наши клиенты — это люди, которые ценят качество, надежность и индивидуальный подход.</p>
                     
                     <div class="stats-grid">
                         <div class="stat-item">
