--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div class="nav-container">
             <a href="/" class="logo">EarthDom</a>
             <button class="mobile-menu-toggle" aria-label="Меню">
-             
+                  <span></span>
+                <span></span>
+                <span></span>
             </button>
             <ul class="nav-links">
                 <li><a href="/project.html">Проекты</a></li>
