--- a/material.html
+++ b/material.html
@@ -200,7 +200,7 @@
                 
                 <!-- Карточка материала 6 -->
                 <div class="material-card" data-category="insulation">
-                    <div class="material-image" style="background-image: url('https://images.unsplash.com/photo-1591386768476-31ce67c4f7cc?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="material-image" style="background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Ftdprofnastil.ru%2Fproduct%2Fekstrudirovannyy_penopolistirol_evropleks_m35_2400_600_50%2F&psig=AOvVaw3H2mP0IlUCgJtmBmeRsPih&ust=1757237848644000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKjv26Drw48DFQAAAAAdAAAAABAE');"></div>
                     <div class="material-content">
                         <h3>Экструдированный пенополистирол</h3>
                         <div class="material-properties">
