--- a/material.html
+++ b/material.html
@@ -55,7 +55,7 @@
             <div class="materials-grid">
                 <!-- Карточка материала 1 -->
                 <div class="material-card" data-category="wood">
-                    <div class="material-image" style="background-image: url('https://images.unsplash.com/photo-1594035910387-fea47794261f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="material-image" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqrm8-D-7wbuv1DZzrPx1x7Jl4dOOdCST1pw&s');"></div>
                     <div class="material-content">
                         <h3>Клееный брус</h3>
                         <div class="material-properties">
