--- a/services.html
+++ b/services.html
@@ -45,7 +45,7 @@
             <h2 class="section-title">Что мы предлагаем</h2>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-image" style="background-image: url('https://images.unsplash.com/photo-1549517046-0d0592ea38f7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="service-image" style="background-image: url('https://xn--80axh3d.xn--p1ai/images/03-inzhener-proektirovshik.jpg');"></div>
                     <div class="service-content">
                         <h3>Проектирование</h3>
                         <p>Разработка индивидуальных и типовых проектов каркасных домов с учетом ваших пожеланий и особенностей участка.</p>
