--- a/project.html
+++ b/project.html
@@ -239,9 +239,10 @@
                         <h3>Особенности</h3>
                         <ul id="modal-features"></ul>
                     </div>
-                    <div class="modal-actions">
-                        <button class="btn primary">Заказать этот проект</button>
-                    </div>
+                    <!-- В модальном окне заменим кнопку -->
+<div class="modal-actions">
+    <button class="btn primary" id="order-project-btn">Заказать этот проект</button>
+</div>
                 </div>
             </div>
         </div>
