--- a/project.html
+++ b/project.html
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 
-                <div class="project-card" data-category="large" data-project=>
+                <div class="project-card" data-category="large" data-project="premium">
                     <div class="project-img" style="background-image: url('https://images.unsplash.com/photo-1600607687644-aac4c3eac7f4?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
                     <div class="project-info">
                         <h3>Дом "Премиум"</h3>
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 
-                <div class="project-card" data-category="medium" data-project=>
+                <div class="project-card" data-category="medium" data-project="eko">
                     <div class="project-img" style="background-image: url('https://images.unsplash.com/photo-1600566753086-00f18fb6b3ea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
                     <div class="project-info">
                         <h3>Дом "Эко"</h3>
