--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </button>
             <ul class="nav-links">
                 <li><a href="/project.html">Проекты</a></li>
+                 <li><a href="/terrace.html">Террасные покрытия</a></li>
                 <li><a href="/material.html">Материалы</a></li>
                 <li><a href="/services.html">Услуги</a></li>
                 <li><a href="/company.html">О компании</a></li>
@@ -158,11 +159,13 @@
             <div class="footer-column">
                 <h3>Меню</h3>
                 <ul>
-                    <li><a href="#">Главная</a></li>
-                    <li><a href="#">Проекты</a></li>
-                    <li><a href="#">Услуги</a></li>
-                    <li><a href="#">О компании</a></li>
-                    <li><a href="#">Контакты</a></li>
+                <li><a href="/index.html">Главная</a></li>
+                <li><a href="/project.html">Проекты</a></li>
+                 <li><a href="/terrace.html">Террасные покрытия</a></li>
+                <li><a href="/material.html">Материалы</a></li>
+                <li><a href="/services.html">Услуги</a></li>
+                <li><a href="/company.html">О компании</a></li>
+                <li><a href="/contacts.html">Контакты</a></li>
                 </ul>
             </div>
         </div>
