--- a/material.html
+++ b/material.html
@@ -18,6 +18,7 @@
             </button>
             <ul class="nav-links">
                 <li><a href="/project.html">Проекты</a></li>
+                <li><a href="/terrace.html">Терассные покрытия</a></li>
                 <li><a href="/material.html">Материалы</a></li>
                 <li><a href="/services.html">Услуги</a></li>
                 <li><a href="/company.html">О компании</a></li>
@@ -287,10 +288,12 @@
                 <h3>Меню</h3>
                 <ul>
                     <li><a href="index.html">Главная</a></li>
-                    <li><a href="projects.html">Проекты</a></li>
-                    <li><a href="services.html">Услуги</a></li>
-                    <li><a href="about.html">О компании</a></li>
-                    <li><a href="contacts.html">Контакты</a></li>
+                     <li><a href="/project.html">Проекты</a></li>
+                    <li><a href="/terrace.html">Терассные покрытия</a></li>
+                    <li><a href="/material.html">Материалы</a></li>
+                    <li><a href="/services.html">Услуги</a></li>
+                    <li><a href="/company.html">О компании</a></li>
+                    <li><a href="/contacts.html">Контакты</a></li>
                 </ul>
             </div>
         </div>
