--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
             </button>
             <ul class="nav-links">
                  <li><a href="/project.html">Проекты</a></li>
-                <li><a href="/terrace.html">Терассные покрытия</a></li>
+                <li><a href="/terrace.html">Террасные покрытия</a></li>
                 <li><a href="/material.html">Материалы</a></li>
                 <li><a href="/services.html">Услуги</a></li>
                 <li><a href="/company.html">О компании</a></li>
@@ -184,7 +184,7 @@
                 <ul>
                     <li><a href="index.html">Главная</a></li>
                      <li><a href="/project.html">Проекты</a></li>
-                    <li><a href="/terrace.html">Терассные покрытия</a></li>
+                    <li><a href="/terrace.html">Террасные покрытия</a></li>
                     <li><a href="/material.html">Материалы</a></li>
                     <li><a href="/services.html">Услуги</a></li>
                     <li><a href="/company.html">О компании</a></li>
