--- a/terrace.html
+++ b/terrace.html
@@ -17,7 +17,8 @@
                 <span></span>
             </button>
             <ul class="nav-links">
-                <li><a href="/project.html">Проекты</a></li>
+                 <li><a href="/project.html">Проекты</a></li>
+                <li><a href="/terrace.html">Террасные покрытия</a></li>
                 <li><a href="/material.html">Материалы</a></li>
                 <li><a href="/services.html">Услуги</a></li>
                 <li><a href="/company.html">О компании</a></li>
@@ -347,11 +348,12 @@
                 <h3>Меню</h3>
                 <ul>
                     <li><a href="/">Главная</a></li>
-                    <li><a href="/project.html">Проекты</a></li>
-                    <li><a href="/material.html">Материалы</a></li>
-                    <li><a href="/services.html">Услуги</a></li>
-                    <li><a href="/company.html">О компании</a></li>
-                    <li><a href="/contacts.html">Контакты</a></li>
+                     <li><a href="/project.html">Проекты</a></li>
+                <li><a href="/terrace.html">Террасные покрытия</a></li>
+                <li><a href="/material.html">Материалы</a></li>
+                <li><a href="/services.html">Услуги</a></li>
+                <li><a href="/company.html">О компании</a></li>
+                <li><a href="/contacts.html">Контакты</a></li>
                 </ul>
             </div>
         </div>
