--- a/terrace.html
+++ b/terrace.html
@@ -322,7 +322,7 @@
             <h2>Готовы создать идеальную террасу?</h2>
             <p>Оставьте заявку для бесплатной консультации и расчета стоимости материалов и монтажа</p>
             <form class="contact-form">
-                <button type="submit" class="btn">Получить консультацию</button>
+                <a href="contacts.html" class="btn">Оставить заявку</a>
             </form>
         </div>
     </section>
