--- a/project.html
+++ b/project.html
@@ -57,7 +57,7 @@
             <!-- Сетка проектов -->
             <div class="projects-grid">
                 <!-- Проект 1 -->
-                <div class="project-card" data-category="medium completed">
+                <div class="project-card" data-category="medium completed"> <!-- В data-category прописывается тип дома  -->
                     <div class="project-img" style="background-image: url('https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
                     <div class="project-info">
                         <h3>Дом "Северный"</h3>
