--- a/project.html
+++ b/project.html
@@ -180,6 +180,35 @@
         </div>
     </footer>
 
+    <!-- Модальное окно проекта -->
+<div id="projectModal" class="modal">
+    <div class="modal-content">
+        <span class="modal-close">&times;</span>
+        <div class="modal-body">
+            <div class="modal-image">
+                <img id="modalProjectImage" src="" alt="Проект дома">
+            </div>
+            <div class="modal-info">
+                <h2 id="modalProjectTitle"></h2>
+                <div class="modal-details">
+                    <p><strong>Площадь:</strong> <span id="modalProjectArea"></span></p>
+                    <p><strong>Срок строительства:</strong> <span id="modalProjectTime"></span></p>
+                    <p><strong>Цена:</strong> <span id="modalProjectPrice"></span></p>
+                </div>
+                <div class="modal-description">
+                    <h3>Описание проекта</h3>
+                    <p id="modalProjectDescription"></p>
+                </div>
+                <div class="modal-features">
+                    <h3>Особенности</h3>
+                    <ul id="modalProjectFeatures"></ul>
+                </div>
+                <a href="contacts.html" class="btn modal-btn">Связаться с нами</a>
+            </div>
+        </div>
+    </div>
+</div>
+    
     <script src="js/script.js"></script>
 </body>
 </html>
