--- a/project.html
+++ b/project.html
@@ -208,7 +208,8 @@
         </div>
     </div>
 </div>
-    
+
+    <script src="js/projects.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
