--- a/contacts.html
+++ b/contacts.html
@@ -199,5 +199,6 @@
 
     <script src="js/script.js"></script>
     <script src="js/contacts.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 </html>
