--- a/company.html
+++ b/company.html
@@ -184,5 +184,6 @@
     
     <script src="js/script.js"></script>
     <script src="js/about.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 </html>
