--- a/terrace.html
+++ b/terrace.html
@@ -43,7 +43,8 @@
     <!-- Секция с преимуществами террасных покрытий -->
     <section class="advantages-section">
         <div class="container">
-            <h2 class="section-title">Почему выбирают наши террасные покрытия</h2>
+            <!-- Найдите этот заголовок в секции преимуществ -->
+            <h2 class="section-title terrace-section-title">Почему выбирают наши террасные покрытия</h2>
             <div class="advantages-grid">
                 <div class="advantage-card">
                     <div class="advantage-icon">🌧️</div>
