--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
     <!-- Секция проектов -->
     <section class="projects">
-        <h2 class="section-title">Наши реализованные проекты</h2>
+        <h2 class="section-title terrace-section-title">Наши реализованные проекты</h2>
         <div class="projects-grid">
             <a href="project.html" class="project-card-link">
                 <div class="project-card">
