--- a/material.html
+++ b/material.html
@@ -19,6 +19,7 @@
             <ul class="nav-links">
                 <li><a href="/project.html">Проекты</a></li>
                 <li><a href="/terrace.html">Террасные покрытия</a></li>
+                <li><a href="/bv-doma.html">Быстровозводимые дома</a></li>
                 <li><a href="/material.html">Материалы</a></li>
                 <li><a href="/services.html">Услуги</a></li>
                 <li><a href="/company.html">О компании</a></li>
@@ -290,6 +291,7 @@
                     <li><a href="index.html">Главная</a></li>
                      <li><a href="/project.html">Проекты</a></li>
                     <li><a href="/terrace.html">Террасные покрытия</a></li>
+                    <li><a href="/bv-doma.html">Быстровозводимые дома</a></li>
                     <li><a href="/material.html">Материалы</a></li>
                     <li><a href="/services.html">Услуги</a></li>
                     <li><a href="/company.html">О компании</a></li>
