--- a/bvdoma.html
+++ b/bvdoma.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Террасные покрытия - EarthDom</title>
+    <title>Быстровозводимые дома - EarthDom</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
