--- a/bvdoma.html
+++ b/bvdoma.html
@@ -17,9 +17,9 @@
                 <span></span>
             </button>
             <ul class="nav-links">
-                 <li><a href="/project.html">Проекты</a></li>
+                <li><a href="/project.html">Проекты</a></li>
                 <li><a href="/terrace.html">Террасные покрытия</a></li>
-                <li><a href="/bvdoma.html">Быстровозводимые дома</a></li>
+                <li><a href="/bvdoma.html" class="active">Быстровозводимые дома</a></li>
                 <li><a href="/material.html">Материалы</a></li>
                 <li><a href="/services.html">Услуги</a></li>
                 <li><a href="/company.html">О компании</a></li>
@@ -32,9 +32,191 @@
             </ul>
         </div>
     </nav>
+    
+    <!-- Герой-секция -->
+    <section class="bv-hero">
+        <div class="bv-hero-content">
+            <h1>Быстровозводимые дома</h1>
+            <p>Современное решение для комфортного и быстрого заселения</p>
+        </div>
+    </section>
 
-  
-<!-- Подвал -->
+    <!-- Преимущества быстровозводимых домов -->
+    <section class="bv-advantages">
+        <div class="container">
+            <h2 class="section-title">Преимущества быстровозводимых домов</h2>
+            <div class="advantages-grid">
+                <div class="advantage-card">
+                    <div class="advantage-icon">⚡</div>
+                    <h3>Скорость строительства</h3>
+                    <p>Сроки возведения от 2 до 4 месяцев в зависимости от сложности проекта</p>
+                </div>
+                <div class="advantage-card">
+                    <div class="advantage-icon">💰</div>
+                    <h3>Экономия средств</h3>
+                    <p>Стоимость на 20-30% ниже традиционных строительных технологий</p>
+                </div>
+                <div class="advantage-card">
+                    <div class="advantage-icon">🌿</div>
+                    <h3>Экологичность</h3>
+                    <p>Используем натуральные и безопасные для здоровья материалы</p>
+                </div>
+                <div class="advantage-card">
+                    <div class="advantage-icon">❄️</div>
+                    <h3>Энергоэффективность</h3>
+                    <p>Отличная теплоизоляция позволяет экономить на отоплении</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Технологии строительства -->
+    <section class="bv-technologies">
+        <div class="container">
+            <h2 class="section-title">Наши технологии строительства</h2>
+            <div class="technologies-grid">
+                <div class="technology-card">
+                    <div class="tech-image" style="background-image: url('https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="tech-content">
+                        <h3>Каркасная технология</h3>
+                        <p>Наиболее популярный вариант с оптимальным соотношением цены и качества. Деревянный каркас заполняется утеплителем и обшивается с двух сторон.</p>
+                        <ul class="tech-features">
+                            <li>Срок строительства: 2-3 месяца</li>
+                            <li>Срок эксплуатации: 50+ лет</li>
+                            <li>Теплопроводность: низкая</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="technology-card">
+                    <div class="tech-image" style="background-image: url('https://images.unsplash.com/photo-1600607687920-4e2a09cf159d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="tech-content">
+                        <h3>СИП-панели</h3>
+                        <p>Строительство из готовых сэндвич-панелей с утеплителем. Максимальная скорость возведения и отличные теплоизоляционные свойства.</p>
+                        <ul class="tech-features">
+                            <li>Срок строительства: 1-2 месяца</li>
+                            <li>Срок эксплуатации: 70+ лет</li>
+                            <li>Теплопроводность: очень низкая</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="technology-card">
+                    <div class="tech-image" style="background-image: url('https://images.unsplash.com/photo-1600566752355-35792bedcfea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="tech-content">
+                        <h3>ЛСТК (легкие стальные конструкции)</h3>
+                        <p>Современная технология с использованием стального каркаса. Идеально для сложных архитектурных решений и многоэтажного строительства.</p>
+                        <ul class="tech-features">
+                            <li>Срок строительства: 2-4 месяца</li>
+                            <li>Срок эксплуатации: 100+ лет</li>
+                            <li>Теплопроводность: низкая</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Этапы строительства -->
+    <section class="bv-stages">
+        <div class="container">
+            <h2 class="section-title">Этапы строительства</h2>
+            <div class="stages-timeline">
+                <div class="stage">
+                    <div class="stage-number">1</div>
+                    <div class="stage-content">
+                        <h3>Проектирование</h3>
+                        <p>Разработка индивидуального проекта или выбор из каталога. Согласование планировки, материалов и сроков.</p>
+                    </div>
+                </div>
+                <div class="stage">
+                    <div class="stage-number">2</div>
+                    <div class="stage-content">
+                        <h3>Фундамент</h3>
+                        <p>Устройство облегченного фундамента (ленточного, свайного или плитного) в зависимости от грунта.</p>
+                    </div>
+                </div>
+                <div class="stage">
+                    <div class="stage-number">3</div>
+                    <div class="stage-content">
+                        <h3>Возведение каркаса</h3>
+                        <p>Монтаж несущей конструкции дома согласно проектной документации.</p>
+                    </div>
+                </div>
+                <div class="stage">
+                    <div class="stage-number">4</div>
+                    <div class="stage-content">
+                        <h3>Утепление и отделка</h3>
+                        <p>Укладка теплоизоляции, монтаж внутренних и внешних отделочных материалов.</p>
+                    </div>
+                </div>
+                <div class="stage">
+                    <div class="stage-number">5</div>
+                    <div class="stage-content">
+                        <h3>Инженерные системы</h3>
+                        <p>Прокладка электрики, водоснабжения, канализации, отопления и вентиляции.</p>
+                    </div>
+                </div>
+                <div class="stage">
+                    <div class="stage-number">6</div>
+                    <div class="stage-content">
+                        <h3>Сдача объекта</h3>
+                        <p>Финальные работы, уборка, проверка всех систем и передача ключей заказчику.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Примеры проектов -->
+    <section class="bv-projects">
+        <div class="container">
+            <h2 class="section-title">Примеры быстровозводимых домов</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-img" style="background-image: url('https://images.unsplash.com/photo-1600607687920-4e2a09cf159d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="project-info">
+                        <h3>Проект "Компакт"</h3>
+                        <p>Площадь: 60 м²</p>
+                        <p>Срок строительства: 1.5 месяца</p>
+                        <p>Технология: СИП-панели</p>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-img" style="background-image: url('https://images.unsplash.com/photo-1600566752355-35792bedcfea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="project-info">
+                        <h3>Проект "Стандарт"</h3>
+                        <p>Площадь: 100 м²</p>
+                        <p>Срок строительства: 2.5 месяца</p>
+                        <p>Технология: Каркасная</p>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-img" style="background-image: url('https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+                    <div class="project-info">
+                        <h3>Проект "Премиум"</h3>
+                        <p>Площадь: 150 м²</p>
+                        <p>Срок строительства: 4 месяца</p>
+                        <p>Технология: ЛСТК</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Секция с призывом к действию -->
+    <section class="bv-cta">
+        <div class="container">
+            <div class="cta-content">
+                <h2>Готовы построить дом вашей мечты?</h2>
+                <p>Свяжитесь с нами для бесплатной консультации и расчета стоимости вашего проекта</p>
+                <div class="cta-buttons">
+                    <a href="/contacts.html" class="btn">Получить консультацию</a>
+                    <a href="/project.html" class="btn btn-outline">Посмотреть проекты</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Подвал -->
     <footer>
         <div class="footer-content">
             <div class="footer-column">
@@ -46,20 +228,20 @@
                 <ul>
                     <li>г. Москва, ул. Строителей, 15</li>
                     <li>+7 (495) 123-45-67</li>
-                    <li>info@earthdom.ru</li>
+                    <li>info@karkasdomstroy.ru</li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>Меню</h3>
                 <ul>
-                    <li><a href="index.html">Главная</a></li>
-                     <li><a href="/project.html">Проекты</a></li>
-                <li><a href="/terrace.html">Террасные покрытия</a></li>
-                <li><a href="/bvdoma.html">Быстровозводимые дома</a></li>
-                <li><a href="/material.html">Материалы</a></li>
-                <li><a href="/services.html">Услуги</a></li>
-                <li><a href="/company.html">О компании</a></li>
-                <li><a href="/contacts.html">Контакты</a></li>
+                    <li><a href="/index.html">Главная</a></li>
+                    <li><a href="/project.html">Проекты</a></li>
+                    <li><a href="/terrace.html">Террасные покрытия</a></li>
+                    <li><a href="/bvdoma.html">Быстровозводимые дома</a></li>
+                    <li><a href="/material.html">Материалы</a></li>
+                    <li><a href="/services.html">Услуги</a></li>
+                    <li><a href="/company.html">О компании</a></li>
+                    <li><a href="/contacts.html">Контакты</a></li>
                 </ul>
             </div>
         </div>
@@ -69,7 +251,5 @@
     </footer>
     
     <script src="js/script.js"></script>
-    <script src="js/about.js"></script>
-    <script src="js/theme.js"></script>
 </body>
 </html>
