--- a/bvdoma.html
+++ b/bvdoma.html
@@ -171,6 +171,7 @@
         <div class="container">
             <h2 class="section-title">Примеры быстровозводимых домов</h2>
             <div class="projects-grid">
+                <a href="project.html" class="project-card-link">
                 <div class="project-card">
                     <div class="project-img" style="background-image: url('https://images.unsplash.com/photo-1600607687920-4e2a09cf159d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
                     <div class="project-info">
@@ -180,6 +181,8 @@
                         <p>Технология: СИП-панели</p>
                     </div>
                 </div>
+                </a>
+                <a href="project.html" class="project-card-link">
                 <div class="project-card">
                     <div class="project-img" style="background-image: url('https://images.unsplash.com/photo-1600566752355-35792bedcfea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
                     <div class="project-info">
@@ -189,6 +192,8 @@
                         <p>Технология: Каркасная</p>
                     </div>
                 </div>
+                </a>
+                <a href="project.html" class="project-card-link">
                 <div class="project-card">
                     <div class="project-img" style="background-image: url('https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
                     <div class="project-info">
@@ -198,6 +203,7 @@
                         <p>Технология: ЛСТК</p>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
     </section>
